logs/dag_id=Weather_DAG_V5.4/run_id=scheduled__2024-02-13T120100+0000/task_id=data_to_db/attempt=1.log
[2024-02-13T12:10:39.140+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V5.4.data_to_db scheduled__2024-02-13T12:01:00+00:00 [queued]>
[2024-02-13T12:10:39.154+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V5.4.data_to_db scheduled__2024-02-13T12:01:00+00:00 [queued]>
[2024-02-13T12:10:39.155+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-13T12:10:39.194+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): data_to_db> on 2024-02-13 12:01:00+00:00
[2024-02-13T12:10:39.203+0000] {standard_task_runner.py:60} INFO - Started process 5431 to run task
[2024-02-13T12:10:39.215+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V5.4', 'data_to_db', 'scheduled__2024-02-13T12:01:00+00:00', '--job-id', '11562', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmpag0f2_28']
[2024-02-13T12:10:39.219+0000] {standard_task_runner.py:88} INFO - Job 11562: Subtask data_to_db
[2024-02-13T12:10:39.326+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V5.4.data_to_db scheduled__2024-02-13T12:01:00+00:00 [running]> on host 06573eafe810
[2024-02-13T12:10:39.473+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V5.4' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-13T12:01:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-13T12:01:00+00:00'
[2024-02-13T12:10:39.488+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-13T12:10:39.519+0000] {Weather_dag.py:78} INFO -    Unnamed: 0    City        date  hour  temperature_c  pressure  is_rainy
0           0  Москва  2024-02-13     0             -3       744         0
1           1  Москва  2024-02-13     1             -2       744         0
2           2  Москва  2024-02-13     2             -2       744         0
3           3  Москва  2024-02-13     3             -3       745         1
4           4  Москва  2024-02-13     4             -4       745         0
[2024-02-13T12:10:39.534+0000] {Weather_dag.py:85} INFO - columns: Unnamed: 0, City, date, hour, temperature_c, pressure, is_rainy
[2024-02-13T12:10:39.535+0000] {Weather_dag.py:86} INFO - columns: Index(['Unnamed: 0', 'City', 'date', 'hour', 'temperature_c', 'pressure',
       'is_rainy'],
      dtype='object')
[2024-02-13T12:10:39.536+0000] {Weather_dag.py:90} INFO - values: VALUES(%s,%s,%s,%s,%s,%s,%s)
[2024-02-13T12:10:39.543+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/Weather_dag.py", line 95, in csv_db
    psycopg2.extras.execute_batch(pCursor, insert_stmt, df.values)
  File "/home/airflow/.local/lib/python3.8/site-packages/psycopg2/extras.py", line 1216, in execute_batch
    cur.execute(b";".join(sqls))
psycopg2.errors.SyntaxError: syntax error at or near ":"
LINE 1: INSERT INTO weather_tab (Unnamed: 0, City, date, hour, tempe...
                                        ^

[2024-02-13T12:10:39.558+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V5.4, task_id=data_to_db, execution_date=20240213T120100, start_date=20240213T121039, end_date=20240213T121039
[2024-02-13T12:10:39.575+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 11562 for task data_to_db (syntax error at or near ":"
LINE 1: INSERT INTO weather_tab (Unnamed: 0, City, date, hour, tempe...
                                        ^
; 5431)
[2024-02-13T12:10:39.596+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-13T12:10:39.624+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
